Squashing bug with card id field not "Enter"ing

--- a/static/style.css
+++ b/static/style.css
@@ -58,3 +58,8 @@ body {
 	box-shadow: 0 0 20px rgba(0, 212, 255, 0.6);
 	transform: translateY(-2px)
 }
+
+.hidden-ui {
+    position: absolute;
+	left: -10000px;
+}
